fixed a few bugs: - path issue when displaying tracklist & there is nothing currently playing - THUNDERDROME wrapping on login page - <enter> now submits login form - visualizer showing when no song is queued

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -88,7 +88,7 @@ $radius: 12px;
 $input-radius: 0px;
 $input-border-color: colors.$text;
 $input-hover-border-color: colors.$text;
-$input-background-color: colors.$background;
+$input-background-color: colors.$text-invert;
 $input-hover-color: colors.$text-light;
 $input-focus-box-shadow-size: 0;
 $input-focus-box-shadow-color: none;
